use specific objectives instead of research questions

--- a/cap1.tex
+++ b/cap1.tex
@@ -15,7 +15,7 @@ LoL é um jogo de arena de batalha \textit{online} para vários jogadores (\text
 
 A grande diversidade e dinamicidade das ações dos personagens nas partidas \cite{drachen2014skill}, bem como seus desempenhos individuais (ou seja, ouro ganho, campeões abatidos ou derrotados, dano causado, cura recebida, etc.), tornam os MOBAs jogos muito competitivos. Em LoL, esta competitividade é ampliada devido à sua popularidade e torneios que fazem com que muitos jogadores se comportem como desportistas profissionais \cite{rioult2014mining}.
 
-Dominar LoL é muito desafiador e requer um investimento substancial de tempo \cite{drachen2014skill}, principalmente para equipes inexperientes que não sabem inicialmente como elaborar ou melhorar suas estratégias. Nesse sentido, uma alternativa que poderia ajudar essas equipes \fj{\'e}{seria} fornecer informações que levem a melhores decisões estratégicas no jogo. Um exemplo dessas informações poderia ser métricas de desempenho baseadas no comportamento de equipes bem-sucedidas. Com isso, as equipes poderiam monitorar seus desempenhos ao longo das partidas e verificar se estão no caminho correto ou não. \fj{}{Por exemplo, vamos supor que uma equipe n\~ao tenha focado em melhorar uma determinada m\'etrica de desempenho em suas partidas por algum motivo, como cura efetuada por minuto. No entanto, ao analisar o desempenho de equipes de sucesso, essa equipe percebe que a pontua\c{c}\~ao da m\'etrica nas equipes de sucesso est\'a em um n\'ivel alto e que, portanto, pode ter alguma relev\^ancia para melhorar o seu desempenho nas partidas.}
+Dominar LoL é muito desafiador e requer um investimento substancial de tempo \cite{drachen2014skill}, principalmente para equipes inexperientes que não sabem inicialmente como elaborar ou melhorar suas estratégias. Nesse sentido, uma alternativa que poderia ajudar essas equipes \fj{\'e}{seria} fornecer informações que levem a melhores decisões estratégicas no jogo. Um exemplo dessas informações poderia ser métricas de desempenho baseadas no comportamento de perfis de equipes bem-sucedidas ou malsucedidas. Com isso, as equipes poderiam monitorar seus desempenhos ao longo das partidas e verificar se estão no caminho correto ou não conforme algum referencial. \fj{}{Por exemplo, vamos supor que uma equipe n\~ao tenha se concentrado em melhorar uma determinada m\'etrica de desempenho em suas partidas por algum motivo, como cura efetuada aos campeões aliados por minuto. No entanto, ao analisar o desempenho de equipes de sucesso em um conjunto de partidas, a equipe percebe que a pontua\c{c}\~ao dessa m\'etrica em equipes de sucesso est\'a em um n\'ivel alto e que, portanto, pode ter alguma relev\^ancia para melhorar o seu desempenho nas partidas.}
 
 Uma das abordagens para \fj{o}{a} criação de métricas de desempenho é o uso da mineração de dados \cite{el2016game}, que permite o estudo da coleta, preparação, processamento, análise e obtenção de informações úteis a partir de dados para apoiar a tomada de decisões \cite{aggarwal2015data}.
 
@@ -24,7 +24,23 @@ Uma das abordagens para a aplicação da mineração de dados é a utilização 
 No contexto de análise de comportamento de jogadores, onde tipicamente não se \fj{tem certeza de como o comportamento pode variar}{conhece o que direciona os comportamentos e decisões dos jogadores}, os algoritmos de aprendizado de máquina \fj{fornecem}{podem fornecer} meios para descobrir as principais características nos dados e padrões relacionados ao comportamento em função dessas características \cite{el2016game}. Esses padrões podem ser utilizados para caracterizar os perfis das equipes, ou seja, equipes que possuem comportamento similar, bem como classificar o perfil de uma equipe.
 
 \section{Objetivos}
-Esta dissertação tem como objetivo \fj{apresentar e discutir os resultados de um processo de minera\c{c}\~ao de dados para identificar e caracterizar perfis de comportamento de equipes bem-sucedidas e malsucedidas no contexto do jogo League of Legends, baseando-se em m\'etricas sumarizadas de desempenho dos jogadores nas partidas}{identificar e caracterizar perfis de comportamento de equipes bem-sucedidas e malsucedidas no contexto do jogo League of Legends usando um processo de minera\c{c}\~ao de dados baseado em dados sumarizados de desempenho de jogadores nas partidas}. A Figura ~\ref{fig:metodologia} apresenta a metodologia que usamos para atingir o objetivo. Primeiro, coletamos partidas do \textit{site} oficial de histórico de partidas de LoL. \fj{Em seguida, modelamos}{Com esses dados, preparamos} um conjunto \fj{de dados}{} de desempenho de equipes extraindo características a partir de estatísticas básicas de desempenho individual dos jogadores nas partidas, como quantidade de ouro ganho, quantidade de monstros abatidos, dano físico total recebido, dentre outros. Depois, para transformar \fj{os}{esses} dados em métricas úteis de desempenho \fj{}{(por exemplo, quantidade de ouro ganho por minuto)}, realizamos outras tarefas relacionadas a preparação de dados, tais como limpeza de dados, remoção de características com baixa variância, \fj{detec\c{c}\~ao}{remo\c{c}\~ao} de \textit{outliers}, cálculo de métricas e normalização de dados e análise de redundância de características. \fj{Para descobrir padr\~oes de comportamento,}{Depois disso, } aplicamos uma análise de agrupamento \fj{(\textit{K-means clustering})}{com o m\'etodo \textit{K-means clustering}} nos dados \fj{desempenho de equipes}{transformados e reduzidos} \fj{}{para descobrir padr\~oes de comportamento, ou seja,} para descobrir um número ótimo de grupos e, assim, agrupar equipes similares. Finalmente, caracterizamos cada grupo por meio de uma análise exploratória dos dados. \fj{Os resultados implicam que alguns grupos de equipes s\~ao mais propensos a terem equipes vencedoras do que outros e a influ\^encia das caracter\'isticas \'e distinta para cada um, o que nos permitiu definir perfis de equipes bem-sucedidas e malsucedidas baseando-se nas m\'etricas de desempenho das equipes.}{Alguns grupos s\~ao mais propensos a terem equipes mais vencedoras do que outros, os resultados do nosso estudo ajudaram a descobrir as caracter\'isticas que est\~ao associadas a essa propens\~ao e nos permitiram definir perfis de equipes bem-sucedidas e malsucedidas baseando-se nas m\'etricas de desempenho das equipes.}
+
+\subsection{Objetivo Geral}
+
+Esta dissertação tem como objetivo encontrar e caracterizar perfis de comportamento de equipes bem-sucedidas e malsucedidas no contexto do jogo League of Legends usando um processo de minera\c{c}\~ao de dados baseado em dados sumarizados de desempenho de jogadores nas partidas.
+
+\subsection{Objetivo Específicos}
+
+\begin{enumerate}[label=(\roman*)]
+  \item Coletar dados de equipes em partidas de League of Legends;
+  \item Extrair métricas de desempenho de equipes que sejam intuitivas para os jogadores e outros interessados a partir dos dados coletados;
+  \item Encontrar padrões úteis de comportamento de equipes baseando-se nas métricas de desempenho das equipes;
+  \item Caracterizar perfis de comportamento de equipes bem-sucedidas e malsucedidas usando esses padrões.
+\end{enumerate}
+
+\section{Metodologia}
+
+A Figura ~\ref{fig:metodologia} apresenta a metodologia que usamos para atingir o objetivo. Primeiro, coletamos partidas do \textit{site} oficial de histórico de partidas de LoL. \fj{Em seguida, modelamos}{Com esses dados, preparamos} um conjunto \fj{de dados}{} de desempenho de equipes extraindo características a partir de estatísticas básicas de desempenho individual dos jogadores nas partidas, como quantidade de ouro ganho, quantidade de monstros abatidos, dano físico total recebido, dentre outros. Depois, para transformar \fj{os}{esses} dados em métricas úteis de desempenho \fj{}{(por exemplo, quantidade de ouro ganho por minuto)}, realizamos outras tarefas relacionadas a preparação de dados, tais como limpeza de dados, remoção de características com baixa variância, \fj{detec\c{c}\~ao}{remo\c{c}\~ao} de \textit{outliers}, cálculo de métricas e normalização de dados e análise de redundância de características. \fj{Para descobrir padr\~oes de comportamento,}{Depois disso, } aplicamos uma análise de agrupamento \fj{(\textit{K-means clustering})}{com o m\'etodo \textit{K-means clustering}} nos dados \fj{desempenho de equipes}{transformados e reduzidos} \fj{}{para descobrir padr\~oes de comportamento, ou seja,} para descobrir um número ótimo de grupos e, assim, agrupar equipes similares. Finalmente, caracterizamos cada grupo por meio de uma análise exploratória dos dados. \fj{Os resultados implicam que alguns grupos de equipes s\~ao mais propensos a terem equipes vencedoras do que outros e a influ\^encia das caracter\'isticas \'e distinta para cada um, o que nos permitiu definir perfis de equipes bem-sucedidas e malsucedidas baseando-se nas m\'etricas de desempenho das equipes.}{Alguns grupos s\~ao mais propensos a terem equipes mais vencedoras do que outros, os resultados do nosso estudo ajudaram a descobrir as caracter\'isticas que est\~ao associadas a essa propens\~ao e nos permitiram definir perfis de equipes bem-sucedidas e malsucedidas baseando-se nas m\'etricas de desempenho das equipes.}
 
 \begin{figure*}
   \centering
@@ -32,13 +48,6 @@ Esta dissertação tem como objetivo \fj{apresentar e discutir os resultados de 
   \caption{Metodologia usada para atingir o objetivo da dissertação.}
   \label{fig:metodologia}
 \end{figure*}
-
-\subsection{Questões de Pesquisa}
-
-\begin{enumerate}[label=(\roman*)]
-  \item \fj{}{}É possível encontrar padrões úteis de comportamento de equipes baseando-se nas métricas de desempenho dessas equipes?
-  \item \fj{}{}É possível caracterizar perfis de comportamento de equipes bem-sucedidas e malsucedidas usando esses padrões?
-\end{enumerate}
 
 \section{Contribuições}
 Acreditamos que este trabalho resultou em uma importante contribuição \fj{ao unir o tema}{ao estudar o} comportamento de usuários \fj{aos}{no contexto dos} jogos MOBA. Esses jogos possuem uma crescente popularidade e uma série de aspectos a serem estudados. Até onde sabemos, ainda existe uma escassez de trabalhos acadêmicos que os exploram \cite{drachen2014skill} \cite{ong2015player}, especialmente em relação ao comportamento de jogadores e equipes em LoL.
@@ -732,7 +741,7 @@ Very High & killingSprees (2), minionsKilled (6), neutralMinionsKilledEnemyJungl
 
 
 \chapter{Conclusão}
-Neste estudo, buscamos responder às seguintes questões de pesquisa: (i) é possível encontrar padrões úteis de comportamento de equipes baseando-se nas métricas de desempenho dessas equipes? (ii) é possível caracterizar perfis de comportamento de equipes bem-sucedidas e malsucedidas usando esses padrões?
+Neste estudo, buscamos coletar informações de equipes em partidas de LoL para encontrar padrões úteis de comportamento de equipes baseando-se nas métricas de desempenho dessas equipes e caracterizar perfis de comportamento de equipes bem-sucedidas e malsucedidas usando esses padrões.
 
 Portanto, propomos uma abordagem que passa por várias tarefas de preparação de dados para computar métricas de desempenho de equipes a partir de partidas de LoL, usa o método de agrupamento de dados \textit{K-means Clustering} para encontrar grupos (padrões) nas métricas de desempenho e, por fim, analisa diferentes aspectos dos grupos de desempenho de equipes para caracterizar perfis de comportamento de sucesso e fracasso.
 
