--- a/cap1.tex
+++ b/cap1.tex
@@ -597,12 +597,12 @@ A Figura ~\ref{fig:relevance} ilustra o mapa de calor do ganho de informação a
 \label{fig:relevance}
 \end{figure*}
 
-Seja $A$ a matriz de centróides das métricas de desempenho das equipes $M$ por perfil, onde cada linha $a \in A$ indica os centróides das métricas de um \fj{grupo}{perfil}, e cada coluna $A_j \in A$ indica os centróides das métricas entre os 7 perfis encontrados. A Tabela ~\ref{tab:centers} apresenta a matrix \textit{transposta} dos centróides $t(A)$ e a sumarização desses centróides entre os perfis de modo a  denotar como os perfis se diferem em termos de desempenho. Se multiplicarmos as métricas de desempenho $M$ pela duração média das partidas ($mean(M_{duration}) \approx 29$ minutos) podemos ter uma estimativa do desempenho total dos perfis no final de uma partida. Se compararmos as principais métricas de desempenho do pior perfil (Perfil 4) e do melhor perfil (Perfil 3) em relação a taxa de vitórias, podemos verificar que o melhor perfil tem um desempenho de \textit{deaths} ~40\% inferior, \textit{killingSprees} ~54\% superior e \textit{neutralMinionsKilledEnemyJungle} ~78\% superior. O nível elevado de $neutralMinionsKilledEnemyJungle$ pode indicar que o Perfil 3 possui um execelnte domínio do campo da equipe inimiga e dos \textit{minions} que existem por lá, fazendo com que as equipes desse perfil tenham uma quantidade maior de ouro as custas dos recursos da equipe inimiga, e, assim, comprem melhores itens de defesa e ataque para garantir uma quantidade menor de \textit{deaths} e maior de \textit{killingSprees} por minuto, respectivamente.
+Seja $A$ a matriz de centróides das métricas de desempenho das equipes $M$ por perfil, onde cada linha $a \in A$ indica os centróides das métricas de um \fj{grupo}{perfil}, e cada coluna $A_j \in A$ indica os centróides das métricas entre os 7 perfis encontrados. A Tabela ~\ref{tab:centers} apresenta a matrix \textit{transposta} dos centróides $t(A)$ e a sumarização desses centróides entre os perfis de modo a  denotar como os perfis se diferem em termos de desempenho. Se multiplicarmos as métricas de desempenho $M$ pela duração média das partidas ($mean(M_{duration}) \approx 29$ minutos) podemos ter uma estimativa do desempenho total dos perfis no final de uma partida. Se compararmos as principais métricas de desempenho do pior perfil (Perfil 4) e do melhor perfil (Perfil 3) em relação a taxa de vitórias, podemos verificar que o melhor perfil tem um desempenho de \textit{deaths} ~40\% inferior, \textit{killingSprees} ~54\% superior e \textit{neutralMinionsKilledEnemyJungle} ~78\% superior. O nível elevado de $neutralMinionsKilledEnemyJungle$ pode indicar que o Perfil 3 possui um excelente domínio do campo da equipe inimiga e dos \textit{minions} que existem por lá, fazendo com que as equipes desse perfil tenham uma quantidade maior de ouro as custas dos recursos da equipe inimiga, e, assim, comprem melhores itens de defesa e ataque para garantir uma quantidade menor de \textit{deaths} e maior de \textit{killingSprees} por minuto, respectivamente.
 
 
 \begin{table*}
   \tiny
-  \caption{Centroides das características (métricas de desempenho) para cada um dos 7 perfis encontrados. As últimas 5 colunas da tabelas sumarizam as métricas de desempenho entre os perfis: valor mínimo (Min), média (Mean), variância (Var), desvio padrão (Sd), valor máximo (Max).}
+  \caption{Centróides das características (métricas de desempenho) para cada um dos 7 perfis encontrados. As últimas 5 colunas da tabelas sumarizam as métricas de desempenho entre os perfis: valor mínimo (Min), média (Mean), variância (Var), desvio padrão (Sd), valor máximo (Max).}
   \label{tab:centers}
   \begin{tabular}{p{0.17\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.03\textwidth}p{0.03\textwidth}p{0.045\textwidth}p{0.03\textwidth}p{0.03\textwidth}}
   \toprule
