include more future work

--- a/cap1.tex
+++ b/cap1.tex
@@ -753,7 +753,16 @@ As descobertas do nosso estudo sugerem alguns elementos muito concretos que pode
 
 
 \section{Trabalhos Futuros}
-Para o futuro, poderíamos ampliar nosso trabalho nas seguintes direções: investigar mais correlações de dados com a inclusão de estatísticas cumulativas dependentes da duração das partidas e dados categóricos; construir modelos preditivos para classificar o perfil de comportamento de equipes e prever o resultado das; e entender as semelhanças entre o comportamento de equipes do mundo real e \textit{online}.
+Para o futuro, poderíamos ampliar nosso trabalho nas seguintes direções:
+
+\begin{enumerate}[label=(\roman*)]
+  \item
+  	Investigar mais correlações de características extraindo métricas de desempenho de equipes com base em outros tipos de sumarização além da soma que foi utilizada a partir do desempenho dos jogadores; em estatísticas parciais que dependam da duração de cada partida; em estatísticas que considerem a dependência existente no desempenho das equipes durante cada partida; em dados categóricos;
+  \item
+  	 Construir e comparar modelos preditivos que possam classificar o perfil dos jogadores ou equipes e prever o resultado das partidas com base no perfil dos jogadores ou equipes;
+  \item
+  	Entender as semelhanças entre o comportamento das equipes em esportes do mundo real e virtual.
+\end{enumerate}
 
 % TODO capitulo para classificar depeneho de times em partidas
 % TODO tabela comparativa entre trabalhos relacionados  https://arxiv.org/pdf/1509.05176.pdf
